# GMO-FactLens

./: .gitignore  2.0.0  NOTION_INTEGRATION_README.md  README.md  REFACTORED_SYSTEM_README.md  crewai_workflow.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analysis_agent.py  fact_check.py  notion_publisher.py  scrape_agent.py  search_agent.py  summary_agent.py
database/: __init__.py  db_manager.py
temp/: fact_checked_articles_1754803828.json  fact_checked_articles_1754811205.json  fact_checked_articles_1755308449.json  fact_checked_articles_1755544202.json  fact_checked_articles_1756011189.json  fact_checked_articles_1756011865.json  fact_checked_articles_1756012436.json  fact_checked_articles_1756013838.json  fact_checked_articles_1756014037.json  fact_checked_articles_1756015085.json  final_analysis_1754803843.json  final_analysis_1754811216.json  final_analysis_1755308465.json  final_analysis_1755544219.json  final_analysis_1756011203.json  final_analysis_1756011880.json  final_analysis_1756012452.json  final_analysis_1756013844.json  final_analysis_1756014043.json  final_analysis_1756015091.json  scraped_articles_1754803788.json  scraped_articles_1754811180.json  scraped_articles_1755308408.json  scraped_articles_1755544164.json  scraped_articles_1756011161.json  scraped_articles_1756011827.json  scraped_articles_1756012401.json  scraped_articles_1756013811.json  scraped_articles_1756014015.json  scraped_articles_1756015066.json  summarized_articles_1754803804.json  summarized_articles_1754811190.json  summarized_articles_1755308424.json  (+7 more)
(+2 files in other folders)
